// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`index APIs > GET /indexes/:indexID > should get index successfully 1`] = `
Object {
  "award": 0,
  "collects": 96,
  "createdAt": 1352366596,
  "desc": "[url]http://www.tudou.com/programs/view/W6eIoxnHs6g/[/url]
有美国动画混入，所以准确的说是在日本播放的动画最高收视率（而且是关东地区的
基本大部分是70年代的，那个年代娱乐贫乏优势真大",
  "id": 15045,
  "private": false,
  "replies": 0,
  "stats": Object {
    "subject": Object {
      "anime": 101,
    },
  },
  "title": "日本动画最高收视率TOP100",
  "total": 101,
  "type": 0,
  "uid": 14127,
  "updatedAt": 1020240000,
  "user": Object {
    "avatar": Object {
      "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
      "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
      "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
    },
    "group": 0,
    "id": 14127,
    "joinedAt": 0,
    "nickname": "nickname 14127",
    "sign": "sing 14127",
    "username": "14127",
  },
}
`;

exports[`index APIs > GET /indexes/:indexID/related > should get index related successfully 1`] = `
Object {
  "data": Array [
    Object {
      "award": "",
      "cat": 0,
      "comment": "1位 40.3",
      "createdAt": 1352382566,
      "id": 29277,
      "order": 1,
      "rid": 15045,
      "sid": 806,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "2位 39.9",
      "createdAt": 1352382511,
      "id": 29276,
      "order": 2,
      "rid": 15045,
      "sid": 28165,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "3位 39.4",
      "createdAt": 1352382444,
      "id": 29275,
      "order": 3,
      "rid": 15045,
      "sid": 32585,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "4位 36.9",
      "createdAt": 1352382378,
      "id": 29274,
      "order": 4,
      "rid": 15045,
      "sid": 47243,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "5位 36.7",
      "createdAt": 1352382135,
      "id": 29272,
      "order": 5,
      "rid": 15045,
      "sid": 41983,
      "type": 2,
    },
  ],
  "total": 101,
}
`;

exports[`index APIs > GET /indexes/:indexID/related > should get index related with filters 1`] = `
Object {
  "data": Array [
    Object {
      "award": "",
      "cat": 0,
      "comment": "11位 33.6",
      "createdAt": 1352380988,
      "id": 29258,
      "order": 11,
      "rid": 15045,
      "sid": 53802,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "12位 32.5",
      "createdAt": 1352380796,
      "id": 29257,
      "order": 12,
      "rid": 15045,
      "sid": 36359,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "13位 31.9",
      "createdAt": 1352380648,
      "id": 29252,
      "order": 13,
      "rid": 15045,
      "sid": 53801,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "13位 31.9",
      "createdAt": 1352380716,
      "id": 29254,
      "order": 13,
      "rid": 15045,
      "sid": 2741,
      "type": 2,
    },
    Object {
      "award": "",
      "cat": 0,
      "comment": "15位 31.8",
      "createdAt": 1352380464,
      "id": 29246,
      "order": 15,
      "rid": 15045,
      "sid": 53800,
      "type": 2,
    },
  ],
  "total": 101,
}
`;

exports[`index comments > should get index comments 1`] = `
Array [
  Object {
    "content": "测试目录评论",
    "createdAt": 1718275200,
    "creatorID": 14127,
    "id": 12345680,
    "mainID": 15045,
    "relatedID": 0,
    "replies": Array [
      Object {
        "content": "测试目录评论2",
        "createdAt": 1718275200,
        "creatorID": 14127,
        "id": 12345681,
        "mainID": 15045,
        "relatedID": 12345680,
        "state": 0,
        "user": Object {
          "avatar": Object {
            "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
            "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
            "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
          },
          "group": 0,
          "id": 14127,
          "joinedAt": 0,
          "nickname": "nickname 14127",
          "sign": "sing 14127",
          "username": "14127",
        },
      },
      Object {
        "content": "测试目录评论3",
        "createdAt": 1718275200,
        "creatorID": 14127,
        "id": 12345682,
        "mainID": 15045,
        "relatedID": 12345680,
        "state": 0,
        "user": Object {
          "avatar": Object {
            "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
            "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
            "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
          },
          "group": 0,
          "id": 14127,
          "joinedAt": 0,
          "nickname": "nickname 14127",
          "sign": "sing 14127",
          "username": "14127",
        },
      },
    ],
    "state": 0,
    "user": Object {
      "avatar": Object {
        "large": "https://lain.bgm.tv/pic/user/l/icon.jpg",
        "medium": "https://lain.bgm.tv/pic/user/m/icon.jpg",
        "small": "https://lain.bgm.tv/pic/user/s/icon.jpg",
      },
      "group": 0,
      "id": 14127,
      "joinedAt": 0,
      "nickname": "nickname 14127",
      "sign": "sing 14127",
      "username": "14127",
    },
  },
]
`;

exports[`index comments > should not allow create index comment 1`] = `
Object {
  "code": "NEED_LOGIN",
  "error": "Unauthorized",
  "message": "you need to login before creating a comment",
  "statusCode": 401,
}
`;

exports[`index comments > should not delete index comment not owned 1`] = `
Object {
  "code": "NOT_ALLOWED",
  "error": "Forbidden",
  "message": "you don't have permission to delete a comment which is not yours",
  "statusCode": 403,
}
`;

exports[`index comments > should not edit index comment not owned 1`] = `
Object {
  "code": "NOT_ALLOWED",
  "error": "Forbidden",
  "message": "you don't have permission to edit a comment which is not yours",
  "statusCode": 403,
}
`;

exports[`index comments > should not edit index comment with reply 1`] = `
Object {
  "code": "NOT_ALLOWED",
  "error": "Forbidden",
  "message": "you don't have permission to edit a comment with replies",
  "statusCode": 403,
}
`;

exports[`index comments > should return 404 for non-existent comment when deleting 1`] = `
Object {
  "code": "NOT_FOUND",
  "error": "Not Found",
  "message": "comment id 999999 not found",
  "statusCode": 404,
}
`;

exports[`index comments > should return 404 for non-existent comment when editing 1`] = `
Object {
  "code": "NOT_FOUND",
  "error": "Not Found",
  "message": "comment id 999999 not found",
  "statusCode": 404,
}
`;

exports[`index comments > should return 404 for non-existent index when creating comment 1`] = `
Object {
  "code": "NOT_FOUND",
  "error": "Not Found",
  "message": "index not found",
  "statusCode": 404,
}
`;

exports[`index comments > should return 404 for non-existent index when getting comments 1`] = `
Object {
  "code": "NOT_FOUND",
  "error": "Not Found",
  "message": "index not found",
  "statusCode": 404,
}
`;
